# Robotics-APCC

./: .gitignore  ARCHITECTURE.md  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt
Assests/: CONVERSION_FEATURE_SUMMARY.txt  GRAPHING_UTILITY_README.md  PLAYBACK_USAGE.txt  README_KUKA_VALIDATOR.md  debug_robot_bodies.py  graphing_utility.py  irb_1300_cfg.py  irb_1300_example.py  irb_1300_kinematic_scripts.py  kuka_trajectory_validator.py  toolpath_visualizer.py
Assests/Robot APCC/IRB-1300 900 URDF/: CMakeLists.txt  IRB1300_900_Manipulability.m  IRB1300_900_Manipulability_Top10percent.m  IRB_1300-900_Robot_MI_Yoshikawa_100000points_Trimmed0.1.csv  package.xml
Assests/Robot APCC/IRB-1300 900 URDF/config/: joint_names_IRB-1300 900 URDF.yaml
Assests/Robot APCC/IRB-1300 900 URDF/launch/: display.launch  gazebo.launch
Assests/Robot APCC/IRB-1300 900 URDF/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  base_link.STL  end_effector.stl
Assests/Robot APCC/IRB-1300 900 URDF/urdf/: IRB-1300 900 URDF.csv  IRB-1300 900 URDF.urdf  IRB-1300 900 URDF_ee.urdf  IRB-1300 900 URDF_end_effector.urdf  IRB1300_900_URDF_Checking_Script.m  end_effector.usd
Assests/Robot APCC/IRB-1300 900 URDF/urdf/configuration/: kuka_final_physics.usd  new_kuka_physics.usd  new_kuka_sensor.usd
scripts/: BATCH_PROCESSING_README.md  BATCH_QUICK_START.md  README_analyze_irb1300_trajectory.md  analyze_irb1300_trajectory.py  batch_analyze_trajectories.py  batch_trajectory_processor.py  config_batch_processing.yaml
scripts/debug/: README.md  (+6 more)
(+93 files in other folders)
